Fixing submit button not showing up sometimes with animation

--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,6 @@
         border: none;
         background-color: #00b489;
         font-size: 0.75vw;
-        margin-bottom: 5vh;
+        margin-bottom: 7.5vh;
     }
 }   
